# opentitan

./: .bazelrc  .gitmodules  MODULE.bazel  SUMMARY.md  WORKSPACE  WORKSPACE.bzlmod  book.toml  foo  json5ify.sh  python-requirements.txt
.github/actions/install-deps/: action.yml
.github/workflows/: cherrypick.yml  ci.yml  modprobe.yml  nightly.yml  pr_change_check.yml  pr_lint_review.yml
ci/: install-package-dependencies.sh
ci/scripts/: check-licence-headers.sh  clang-format.sh  get-build-type.sh  include-guard.sh  lint-commits.sh  python-lint.sh  rust-format.sh  whitespace.sh
doc/contributing/fpga/: README.md  debugging_with_ila.md
doc/getting_started/: README.md  setup_fpga.md  setup_hyperdebug.md  setup_verilator.md
hw/ip/aes/rtl/: aes.sv
hw/ip/clkmgr/rtl/: clkmgr.sv
hw/top_darjeeling/: defs.bzl
hw/top_darjeeling/data/otp/: BUILD
hw/top_earlgrey/: BUILD  defs.bzl
hw/top_earlgrey/data/autogen/: top_earlgrey.secrets.testing.gen.hjson
hw/top_earlgrey/data/otp/: BUILD  otp_ctrl_mmap.hjson
hw/top_earlgrey/data/otp/emulation/: BUILD
hw/top_earlgrey/data/otp/sival_skus/: BUILD
hw/top_earlgrey/ip_autogen/otp_ctrl/data/: top_earlgrey_otp_ctrl.ipconfig.hjson
hw/top_earlgrey/ip_autogen/otp_ctrl/doc/: otp_ctrl_field_descriptions.md
hw/top_earlgrey/util/: qemu.sh
hw/top_earlgrey_1.0.0/: BUILD  defs.bzl
hw/top_earlgrey_1.0.0/data/autogen/: BUILD  defs.bzl
hw/top_earlgrey_1.0.0/data/otp/: BUILD  defs.bzl
hw/top_englishbreakfast/util/: prepare_sw.py
quality/: BUILD.bazel
rules/: BUILD  const.bzl  fusesoc.bzl  repo.bzl  tock.bzl  ujson.bzl
rules/opentitan/: qemu.bzl
rules/scripts/: qemu_test.sh
site/block-diagram/: block_diagram.css  block_diagram.js  earlgrey.html
sw/device/examples/bridge/: main.c  screen.c  screen.h
sw/device/examples/spi_display/: BUILD  Tux_135x160.h  Tux_80x95.h  aes_demo.c  app.c  app.h  context.h  ctap.c  ctap.h  demos.h  ibex_logo.h  lowrisc_logo.h  main.c  ot_logo_160x85.h  ot_shape.h  screen.c  screen.h
sw/device/examples/spi_display/cb0r/: BUILD
sw/device/examples/spi_display/images/: BUILD  ibex_logo.h  logo_opentitan_160_39.h  lowrisc_logo_105_80.h  ot_shape_80x80.h  ot_stronks_160_100.h  stronks_160_107.h
sw/device/lib/base/: BUILD
sw/device/lib/dif/: dif_rstmgr.h
sw/device/lib/testing/: entropy_testutils.c  i2c_testutils.c  keymgr_testutils.c  pinmux_testutils.c  pinmux_testutils.h  spi_host_testutils.c  uart_testutils.c
sw/device/lib/testing/test_framework/: BUILD
sw/device/sca/: BUILD
sw/device/silicon_creator/lib/: BUILD  boot_data.h
sw/device/silicon_creator/lib/cert/: cdi_owner.hjson  uds_creator.hjson
sw/device/silicon_creator/lib/drivers/: BUILD  flash_ctrl.c  flash_ctrl.h  rnd.c  rnd.h  spi_device.c
sw/device/silicon_creator/manuf/lib/: BUILD
sw/device/silicon_creator/rom/e2e/shutdown_alert/: BUILD
sw/device/silicon_creator/rom_ext/e2e/rescue/: BUILD
sw/device/silicon_owner/tock/kernel/: BUILD
sw/device/silicon_owner/tock/kernel/src/: main.rs
sw/device/silicon_owner/tock/tests/basic/: BUILD
sw/device/silicon_owner/tock/tests/ctap/: BUILD
sw/device/silicon_owner/tock/tests/ctap/byteorder/: BUILD
sw/device/silicon_owner/tock/tests/ctap/byteorder/src/: lib.rs
sw/device/silicon_owner/tock/tests/ctap/cbor/: BUILD
sw/device/silicon_owner/tock/tests/ctap/crypto/: BUILD
sw/device/silicon_owner/tock/tests/ctap/crypto/src/: ecdh.rs  ecdsa.rs  sha256.rs
sw/device/silicon_owner/tock/tests/ctap/crypto/src/ec/: int256.rs  point.rs
sw/device/silicon_owner/tock/tests/ctap/crypto_data/: aaguid.txt  opensk_upgrade_pub.pem
sw/device/silicon_owner/tock/tests/ctap/lang-items/: BUILD
sw/device/silicon_owner/tock/tests/ctap/libtock-drivers/: BUILD
sw/device/silicon_owner/tock/tests/ctap/opensk/: BUILD
sw/device/silicon_owner/tock/tests/ctap/persistent_store/: BUILD
sw/device/silicon_owner/tock/tests/ctap/rand_core/: BUILD
sw/device/silicon_owner/tock/tests/ctap/rand_core/src/: impls.rs
sw/device/silicon_owner/tock/tests/ctap/src/: main.rs
sw/device/silicon_owner/tock/tests/ctap/src/env/tock/: mod.rs
sw/device/silicon_owner/tock/tests/ctap/zerocopy/: BUILD
sw/device/silicon_owner/tock/tests/ctap/zerocopy/src/: util.rs
sw/device/silicon_owner/tock/tests/uart/: BUILD
sw/device/tests/: BUILD  entropy_src_fw_override_test.c  uart_baud_rate_test.c
sw/device/tests/penetrationtests/firmware/lib/: BUILD  pentest_lib.c
sw/device/tests/penetrationtests/json/: BUILD  pentest_lib_commands.h
sw/host/: Cargo.toml
sw/host/cryptotest/: BUILD  Cargo.toml
sw/host/cryptotest/src/: lib.rs
sw/host/opentitanlib/: BUILD  Cargo.toml  build.rs
sw/host/opentitanlib/bindgen/: Cargo.toml
sw/host/opentitanlib/bindgen/src/: lib.rs
sw/host/opentitanlib/opentitantool_derive/: Cargo.toml
sw/host/opentitanlib/src/: lib.rs
sw/host/opentitanlib/src/app/: mod.rs
sw/host/opentitanlib/src/app/config/: mod.rs  opentitan_ftdi.json
sw/host/opentitanlib/src/backend/: mod.rs  qemu.rs
sw/host/opentitanlib/src/bootstrap/: legacy_rescue.rs
sw/host/opentitanlib/src/console/: spi.rs
sw/host/opentitanlib/src/io/: eeprom.rs  spi.rs
sw/host/opentitanlib/src/transport/: mod.rs
sw/host/opentitanlib/src/transport/ftdi/: gpio.rs  mod.rs  spi.rs
sw/host/opentitanlib/src/transport/qemu/: mod.rs  monitor.rs  reset.rs
sw/host/opentitansession/: Cargo.toml
sw/host/opentitantool/: BUILD  Cargo.toml
sw/host/opentitantool/src/command/: certificate.rs  mod.rs
sw/host/ot_certs/: BUILD
sw/host/ot_certs/src/: codegen.rs  lib.rs  offsets.rs  types.rs  x509.rs
sw/host/ot_certs/src/template/: hjson.rs  mod.rs
sw/host/ot_hal/bindgen/: BUILD
sw/host/tests/chip/gpio/src/: gpio_pinmux.rs
sw/host/tests/chip/spi_device_ottf_console/src/: main.rs
sw/host/tests/chip/uart/src/: uart_baud_rate.rs
sw/host/tests/manuf/manuf_cp_yield_test/src/: main.rs
sw/host/tests/ownership/: transfer_lib.rs
sw/host/tpm2_test_server/: Cargo.toml
toolchain/: BUILD
util/design/: sparse-fsm-encode.py
util/openocd/interface/: cw340_ftdi.cfg
util/site/: blocks.json  build-docs.sh
