# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

module(name = "lowrisc_opentitan")

bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "googletest", version = "1.11.0")
bazel_dep(name = "lowrisc_misc_linters")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")
bazel_dep(name = "rules_fuzzing", version = "0.5.2")
bazel_dep(name = "rules_pkg", version = "0.7.0")

git_override(
    module_name = "lowrisc_misc_linters",
    commit = "13303cfa284e8b8c7040c6ad716b0b0c55e0aa8d",
    remote = "https://github.com/lowRISC/misc-linters",
)

include("//third_party/rust:rust.MODULE.bazel")

include("//third_party/python:python.MODULE.bazel")

bitstreams_repo = use_repo_rule("//rules:bitstreams.bzl", "bitstreams_repo")

bitstreams_repo(name = "bitstreams")
