[package]
name = "opentitantool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
arrayvec = { version = "0.7.2", features = ["serde"] }
atty = "0.2.14"
directories = "4.0.1"
env_logger = "0.10.0"
erased-serde = "0.3.25"
hex = "0.4.3"
humantime = "2.1.0"
log = "0.4.17"
mio = { version = "0.8.6", features = ["os-poll", "net", "os-ext"] }
mio-signals = "0.2.0"
nix = "0.26.2"
raw_tty = "0.1.0"
regex = "1.7.1"
safe-ftdi = { git = "https://github.com/lowRISC/safe-ftdi.git", version = "0.3.0" }
serde = { version = "1.0.156", features = ["serde_derive"] }
serde_annotate = { git = "https://github.com/lowRISC/serde-annotate", version = "0.1.0" }
serde_bytes = "0.11.9"
serde_json = "1.0.94"
shellwords = "1.1.0"
structopt = "0.3.26"
thiserror = "1.0.39"

# Local dependencies
opentitanlib = { path = "../opentitanlib/" }
